--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "react-dom": "^16.11.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.7",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
@@ -146,5 +148,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "serve": "^11.3.0"
   }
 }
